Added fallback route

--- a/Shared/TagList.razor
+++ b/Shared/TagList.razor
@@ -4,7 +4,7 @@
         int idx = i;
         var item = Tags[idx];
         <span class="tagBtn">
-            <a role="button" href='/tags/@(item.Replace(" ", "-")).html' class="btn btn-default btn-sm"> @item</a>
+            <a role="button" href='/tags/@(item.Replace(" ", "-"))' class="btn btn-default btn-sm"> @item</a>
         </span>
     }
 </div>
