--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -15,9 +15,9 @@
         <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="https://www.roman015.com">Roman015</a></li>
-                <li><a href="/posts/index.html">Archive</a></li>
-                <li><a href="/tags/index.html">Tags</a></li>
-                <li><a href="/about.html">About This Blog</a></li>
+                @*<li><a href="/posts/index">Archive</a></li>
+                <li><a href="/tags/index">Tags</a></li>*@
+                <li><a href="/about">About This Blog</a></li>
 
             </ul>
         </div>
