--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -14,8 +14,8 @@
             <div class="col-md-12 text-center">
                 <p class="copyright text-muted">
                     Copyright © @CurrentYear
-                    <br />
-                    <a href="#"><i class="fa fa-rss"></i> RSS Feed</a>
+                    @*<br />
+                    <a href="#"><i class="fa fa-rss"></i> RSS Feed</a>*@
 
                     <br />
                     Built using <strong><a href="https://dotnet.microsoft.com/apps/aspnet/web-apps/blazor">Blazor</a></strong>
