--- a/wwwroot/assets/css/app.css
+++ b/wwwroot/assets/css/app.css
@@ -16,3 +16,11 @@
         right: 0.75rem;
         top: 0.5rem;
     }
+
+.tags-display {
+    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 800;
+    letter-spacing: 1px;
+}
