Added HomePage Button

--- a/Pages/PostsByTag.razor
+++ b/Pages/PostsByTag.razor
@@ -7,6 +7,13 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-8 right-border">
+            <div>
+                <ul class="pager" style="text-align:left">
+                    <li class='prev'>
+                        <a href="/">← HomePage</a>
+                    </li>
+                </ul>
+            </div>
             <PostList Posts="@Posts" />
         </div>
         <div class="col-sm-4 sidebar">
