Image Fix for MarkDown

--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -18,7 +18,7 @@
                     <a href="#"><i class="fa fa-rss"></i> RSS Feed</a>*@
 
                     <br />
-                    Built using <strong><a href="https://dotnet.microsoft.com/apps/aspnet/web-apps/blazor">Blazor</a></strong>
+                    Built using <strong><a href="https://dotnet.microsoft.com/apps/aspnet/web-apps/blazor" target="_blank">Blazor</a></strong>
                 </p>
             </div>
         </div>
