--- a/Pages/PostsByTag.razor
+++ b/Pages/PostsByTag.razor
@@ -10,7 +10,7 @@
             <div>
                 <ul class="pager" style="text-align:left">
                     <li class='prev'>
-                        <a href="/">← HomePage</a>
+                        <a href="/">← Home</a>
                     </li>
                 </ul>
             </div>
