--- a/Pages/About.razor
+++ b/Pages/About.razor
@@ -8,7 +8,7 @@
             <p>
                 The Missing Source Code is place for all my graffiti to reside for all the world to see.
                 It's also an opportunity for me to try webhosting on 
-                <del><a href="/posts/post_003.html">Azure</a></del>
+                <del><a href="/posts/post_001">Azure</a></del>
                 <del>
                     <a href="/posts/post_003.html" title="Yeah, I moved from Azure to DigitalOcean, it's a bit cheaper this way">
                         DigitalOcean
