--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
 <div class="container text-center">
-    <div class="row">        
+    <div class="row">
         <div class="col-sm-12 col-lg-4">
             <NavLink href="QRCode" class="btn btn-info btn-block btn-lg my-1"
                      title="Generate QR Codes">
@@ -35,6 +35,15 @@
                 <img class="btn-icon" src="img/clocks.png" />
                 <br />
                 Timezone Tool
+            </NavLink>
+        </div>
+        <div class="col-sm-12 col-lg-4">
+            <NavLink href="MOHTimeLine"
+                     title="Based on data extracted from MOH's Daily Press Releases"
+                     class="btn btn-info btn-block btn-lg my-1">
+                <img class="btn-icon" src="img/Map.png" />
+                <br />
+                MOH Timeline Map
             </NavLink>
         </div>
         <div class="col-sm-12 col-lg-4">
