--- a/Pages/Toys/MOHMapTimeline.razor
+++ b/Pages/Toys/MOHMapTimeline.razor
@@ -13,7 +13,7 @@
                             <div class="d-flex justify-content-center">
                                 The data about to be shown on the map may not be accurate, and should not be used as the basis for your
                                 decisions. Kindly use official and verifiable sources of information before coming to your conclusions.
-                                This map has been made for demonstration purposes use only.
+                                This map has been made for demonstration purposes only.
                             </div>
                         </div>
                     </div>
