--- a/Pages/Toys/MOHMapTimeline.razor
+++ b/Pages/Toys/MOHMapTimeline.razor
@@ -67,22 +67,36 @@
                             int idx = i;
                             var item = SelectedVisits[idx];
                             <tr>
-                                <th class="d-none d-sm-table-cell" scope="row">@(idx + 1)</th>                                
+                                <th class="d-none d-sm-table-cell" scope="row">@(idx + 1)</th>
                                 <td>@(item.Time)</td>
                                 <td>
                                     @(((MarkupString)(item.LocationFormatted)))
                                 </td>
-                                <td class="d-none d-sm-table-cell">@(item.SourcedOn.Replace("_","/"))</td>
+                                <td class="d-none d-sm-table-cell">
+                                    <a href="@(item.ArticleUrl)">
+                                        @(item.SourcedOn.Replace("_","/"))
+                                    </a>
+                                </td>
                             </tr>
                         }
                     </tbody>
-                </table>   
+                </table>
                 <div class="d-none d-sm-block">
                     <sup>
                         <i>
                             * - "Posted On" means this data was extracted from a Press Release created on this date.
                             There may be more than one Press Release with the same data.
                         </i>
+                    </sup>
+                </div>
+                <div class="d-none d-sm-block py-3">
+                    <sup>
+                        This is based on data extracted from the MOH's Daily Press Release between
+                        <a href="https://www.moh.gov.sg/news-highlights/details/862-more-cases-discharged-344-new-cases-of-covid-19-infection-confirmed">25th May, 2020</a>
+                        and <a href="https://www.moh.gov.sg/news-highlights/details/4-new-cases-of-locally-transmitted-covid-19-infection-28-jun-2021-update">28th June, 2021</a>.
+                        During this time period the Annex "Public Places Visited by Cases in the Community during Infectious Period" was published in the MOH's daily Press Releases.
+                        To allow for verification of the data here, the link to the MOH's announcement where the data was originally extracted from has been provided in the "Posted On" column.
+                        GPS coordinates have been extracted using Singapore Government's <a href="https://www.onemap.gov.sg/main/v2/">OneMap</a> APIs.
                     </sup>
                 </div>
             }
@@ -203,13 +217,14 @@
         public string Address { get; set; }
         public DateTime PeriodStart { get; set; }
         public DateTime PeriodEnd { get; set; }
+        public string PdfUrl { get; set; }
+        public string SourcedOn { get; set; }
+        public string ArticleUrl { get; set; }
         public double Latitude { get; set; }
         public double Longitude { get; set; }
-        public string SourcedOn { get; set; }
 
         public string LocationFormatted => Location
-                .Replace("\\r", " <br/>")
-                .Replace("\\u2022", "  • ");
+                .Replace("•", "<br/>&nbsp;&nbsp;•&nbsp;");
     }
 
     public class Pin
