--- a/Pages/Toys/MOHMapTimeline.razor
+++ b/Pages/Toys/MOHMapTimeline.razor
@@ -83,7 +83,7 @@
                         }
                     </tbody>
                 </table>
-                <div class="d-none d-sm-block">
+                <div class="d-none d-sm-block" style="text-align: justify;">
                     <sup>
                         <i>
                             * - "Posted On" means this data was extracted from a Press Release created on this date.
@@ -91,7 +91,7 @@
                         </i>
                     </sup>
                 </div>
-                <div class="py-3">
+                <div class="py-3" style="text-align: justify;">
                     <sup>
                         This is based on data extracted from the MOH's Daily Press Release between
                         <a href="https://www.moh.gov.sg/news-highlights/details/862-more-cases-discharged-344-new-cases-of-covid-19-infection-confirmed">25th May, 2020</a>
