Fixed Infobox Title

--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -217,3 +217,8 @@ app {
     height: auto !important;
     font-size: 8pt !important;
 }
+
+.infobox-title {
+    font-size: 8pt !important;
+    padding-bottom: 0px !important;
+}
