--- a/Pages/Toys/MOHMapTimeline.razor
+++ b/Pages/Toys/MOHMapTimeline.razor
@@ -52,51 +52,65 @@
     </div> 
     <div class="row">
         <div class="col-md-12">
-            @if (SelectedVisits.Count > 0)
+            @if (IsAccepted)
             {
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th class="d-none d-sm-table-cell" scope="col">#</th>
-                            <th scope="col">Time</th>
-                            <th scope="col">Location (Address)</th>
-                            <th class="d-none d-sm-table-cell" scope="col">Posted On<sup>*</sup></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @for (int i = 0; i < SelectedVisits.Count; i++)
-                        {
-                            int idx = i;
-                            var item = SelectedVisits[idx];
+                @if (SelectedVisits.Count > 0)
+                {
+                    <table class="table">
+                        <thead>
                             <tr>
-                                <th class="d-none d-sm-table-cell" scope="row">@(idx + 1)</th>
-                                <td>@(item.Time)</td>
-                                <td>
-                                    @(((MarkupString)(item.LocationFormatted)))
-                                </td>
-                                <td class="d-none d-sm-table-cell">
-                                    <a href="@(item.ArticleUrl)">
-                                        @(item.SourcedOn.Replace("_","/"))
-                                    </a>
-                                </td>
+                                <th class="d-none d-sm-table-cell" scope="col">#</th>
+                                <th scope="col">Time</th>
+                                <th scope="col">Location (Address)</th>
+                                <th class="d-none d-sm-table-cell" scope="col">Posted On<sup>*</sup></th>
                             </tr>
-                        }
-                    </tbody>
-                </table>
-                <div class="d-none d-sm-block" style="text-align: justify;">
-                    <sup>
-                        <i>
-                            * - "Posted On" means this data was extracted from a Press Release created on this date.
-                            There may be more than one Press Release with the same data.
-                        </i>
-                    </sup>
-                </div>
+                        </thead>
+                        <tbody>
+                            @for (int i = 0; i < SelectedVisits.Count; i++)
+                            {
+                                int idx = i;
+                                var item = SelectedVisits[idx];
+                                <tr>
+                                    <th class="d-none d-sm-table-cell" scope="row">@(idx + 1)</th>
+                                    <td>@(item.Time)</td>
+                                    <td>
+                                        @(((MarkupString)(item.LocationFormatted)))
+                                    </td>
+                                    <td class="d-none d-sm-table-cell">
+                                        <a href="@(item.ArticleUrl)">
+                                            @(item.SourcedOn.Replace("_", "/"))
+                                        </a>
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                    <div class="d-none d-sm-block" style="text-align: justify;">
+                        <sup>
+                            <i>
+                                * - "Posted On" means this data was extracted from a Press Release created on this date.
+                                There may be more than one Press Release with the same data.
+                            </i>
+                        </sup>
+                    </div>
+                }
+                else
+                {
+                    <div style="text-align: center;">
+                        <sup>
+                            <i>
+                                No Data
+                            </i>
+                        </sup>
+                    </div>
+                }
+
                 <div class="py-3" style="text-align: justify;">
                     <sup>
                         This is based on data extracted from the MOH's Daily Press Release between
                         <a href="https://www.moh.gov.sg/news-highlights/details/862-more-cases-discharged-344-new-cases-of-covid-19-infection-confirmed">25th May, 2020</a>
                         and <a href="https://www.moh.gov.sg/news-highlights/details/4-new-cases-of-locally-transmitted-covid-19-infection-28-jun-2021-update">28th June, 2021</a>.
-                        During this time period the Annex "Public Places Visited by Cases in the Community during Infectious Period" was published in the MOH's daily Press Releases.
+                        During this time period the Annex "Public Places Visited by Cases in the Community during Infectious Period" was published within Pdf files as part of the MOH's daily Press Releases.
                         To allow for verification of the data here, the link to the MOH's announcement where the data was originally extracted from has been provided in the "Posted On" column (If you can't see this column, try viewing this page on a bigger/wider screen).
                         GPS coordinates have been extracted using Singapore Government's <a href="https://www.onemap.gov.sg/main/v2/">OneMap</a> APIs.
                     </sup>
@@ -114,6 +128,7 @@
 
     private string StartButtonClass = "";
     private string ControlsClass = "d-none";
+    private bool IsAccepted = false;
 
     IJSObjectReference jsMOHMapTimelineModule;
 
@@ -138,6 +153,7 @@
 
     private async Task LoadBingMapsJs()
     {
+        IsAccepted = true;
         StartButtonClass += " d-none";
         ControlsClass = string.Empty;
 
