--- a/Pages/Toys/MOHMapTimeline.razor.css
+++ b/Pages/Toys/MOHMapTimeline.razor.css
@@ -19,3 +19,31 @@
     font-weight: bold;
     color: black;
 }
+
+#myMap {
+    width: 100%;
+    height: 80vh;
+}
+
+.ButtonText {
+    display: inherit;
+}
+
+.ButtonTextMobile {
+    display:none;
+}
+
+@media only screen and (max-device-width: 480px) {
+    #myMap {
+        width: 100%;
+        height: 50vh;
+    }
+
+    .ButtonText {
+        display: none;
+    }
+
+    .ButtonTextMobile {
+        display: inherit;
+    }
+}
