--- a/Pages/Toys/MOHMapTimeline.razor
+++ b/Pages/Toys/MOHMapTimeline.razor
@@ -116,7 +116,7 @@
                         This is based on data extracted from the MOH's Daily Press Release between
                         <a href="https://www.moh.gov.sg/news-highlights/details/862-more-cases-discharged-344-new-cases-of-covid-19-infection-confirmed">25th May, 2020</a>
                         and <a href="https://www.moh.gov.sg/news-highlights/details/4-new-cases-of-locally-transmitted-covid-19-infection-28-jun-2021-update">28th June, 2021</a>.
-                        During this time period the Annex "Public Places Visited by Cases in the Community during Infectious Period" was published within Pdf files as part of the MOH's daily Press Releases.
+                        During this time period the Annex "Public Places Visited by Cases in the Community during Infectious Period" was published as Pdf files which van be downloaded by clicking the Annex links inside the MOH's daily Press Releases.
                         To allow for verification of the data here, the link to the MOH's announcement where the data was originally extracted from has been provided in the "Posted On" column (If you can't see this column, try viewing this page on a bigger/wider screen).
                         GPS coordinates have been extracted using Singapore Government's <a href="https://www.onemap.gov.sg/main/v2/">OneMap</a> APIs.
                     </sup>
