--- a/Pages/BlogEditor/BlogEditor.razor
+++ b/Pages/BlogEditor/BlogEditor.razor
@@ -1,5 +1,5 @@
 ﻿@page "/BlogEditor"
-@attribute [Authorize]
+@attribute [Authorize(Roles = "BlogAdministrator")]
 
 @inject BlogEditorAPIService BlogEditorApi
 @inject HttpClient Http
