--- a/Shared/BlogTitle.razor
+++ b/Shared/BlogTitle.razor
@@ -14,7 +14,7 @@
                         {
                             int idx = i;
                             var item = Tags[idx];
-                            <a role="button" href="/tags/@(item.Replace(" ","-")).html" class="btn btn-default btn-xs">@item</a>
+                            <a role="button" href="/tags/@(item.Replace(" ","-"))" class="btn btn-default btn-xs">@item</a>
                         }
                     </div>
                 </div>
