Custom Role Access Control For Blazor Front End

--- a/Pages/BlogEditor/BlogEditor.razor
+++ b/Pages/BlogEditor/BlogEditor.razor
@@ -1,5 +1,5 @@
 ﻿@page "/BlogEditor"
-@attribute [Authorize(Roles = "BlogAdministrator")]
+@attribute [PermittedRoleAuthorize("BlogAdministrator")]
 
 @inject BlogEditorAPIService BlogEditorApi
 @inject HttpClient Http
