--- a/Pages/AuthorizedMenu.razor
+++ b/Pages/AuthorizedMenu.razor
@@ -1,17 +1,34 @@
 ﻿@page "/AuthorizedMenu"
 
+@using Microsoft.AspNetCore.Authorization
+@inject IAuthorizationService AuthorizationService
+
 @attribute [Authorize]
 
 <div class="container text-center">
     <div class="row">
-        <div class="col-sm-12 col-lg-4">
-            <NavLink href="BlogEditor" class="btn btn-info btn-block btn-lg my-1"
-                     title="Edit Blog">
-                <img class="btn-icon" src="img/Blog.png" />
-                <br />
-                Blog Editor
-            </NavLink>
-        </div>        
+        @if (IsBlogAdminstrator)
+        {
+            <div class="col-sm-12 col-lg-4">
+                <NavLink href="BlogEditor" class="btn btn-info btn-block btn-lg my-1"
+                         title="Edit Blog">
+                    <img class="btn-icon" src="img/Blog.png" />
+                    <br />
+                    Blog Editor
+                </NavLink>
+            </div>
+        }
     </div>
 </div>
 
+@code{
+    [CascadingParameter]
+    private Task<AuthenticationState> authenticationStateTask { get; set; }
+    private bool IsBlogAdminstrator = false;
+
+    protected override async Task OnInitializedAsync()
+    {
+        var user = (await authenticationStateTask).User;
+        IsBlogAdminstrator = (await AuthorizationService.AuthorizeAsync(user, "BlogAdministratorsOnly")).Succeeded;
+    }
+}
